crates/stateset-db/tests/snapshots/snapshot_migrations__inventory_items_indexes.snap
---
source: crates/stateset-db/tests/snapshot_migrations.rs
expression: inv_indexes
---
[
    "CREATE INDEX idx_inventory_items_sku ON inventory_items(sku)",
]
