crates/stateset-db/tests/snapshots/snapshot_migrations__snapshot_customer_table_schema.snap
---
source: crates/stateset-db/tests/snapshot_migrations.rs
expression: "columns.collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        (
            0,
            "id",
            "TEXT",
            0,
            None,
            1,
        ),
        (
            1,
            "email",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            2,
            "first_name",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            3,
            "last_name",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            4,
            "phone",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            5,
            "status",
            "TEXT",
            1,
            Some(
                "'active'",
            ),
            0,
        ),
        (
            6,
            "accepts_marketing",
            "INTEGER",
            1,
            Some(
                "0",
            ),
            0,
        ),
        (
            7,
            "email_verified",
            "INTEGER",
            1,
            Some(
                "0",
            ),
            0,
        ),
        (
            8,
            "tags",
            "TEXT",
            1,
            Some(
                "'[]'",
            ),
            0,
        ),
        (
            9,
            "metadata",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            10,
            "default_shipping_address_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            11,
            "default_billing_address_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            12,
            "created_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            13,
            "updated_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            14,
            "version",
            "INTEGER",
            1,
            Some(
                "1",
            ),
            0,
        ),
        (
            15,
            "email_key",
            "TEXT",
            0,
            None,
            0,
        ),
    ],
)
