crates/stateset-db/tests/snapshots/snapshot_migrations__snapshot_inventory_items_table_schema.snap
---
source: crates/stateset-db/tests/snapshot_migrations.rs
expression: "columns.collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        (
            0,
            "id",
            "INTEGER",
            0,
            None,
            1,
        ),
        (
            1,
            "sku",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            2,
            "name",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            3,
            "description",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            4,
            "unit_of_measure",
            "TEXT",
            1,
            Some(
                "'EA'",
            ),
            0,
        ),
        (
            5,
            "is_active",
            "INTEGER",
            1,
            Some(
                "1",
            ),
            0,
        ),
        (
            6,
            "created_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            7,
            "updated_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
    ],
)
