crates/stateset-db/tests/snapshots/snapshot_migrations__snapshot_orders_table_schema.snap
---
source: crates/stateset-db/tests/snapshot_migrations.rs
expression: "columns.collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        (
            0,
            "id",
            "TEXT",
            0,
            None,
            1,
        ),
        (
            1,
            "order_number",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            2,
            "customer_id",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            3,
            "status",
            "TEXT",
            1,
            Some(
                "'pending'",
            ),
            0,
        ),
        (
            4,
            "order_date",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            5,
            "total_amount",
            "TEXT",
            1,
            Some(
                "'0'",
            ),
            0,
        ),
        (
            6,
            "currency",
            "TEXT",
            1,
            Some(
                "'USD'",
            ),
            0,
        ),
        (
            7,
            "payment_status",
            "TEXT",
            1,
            Some(
                "'pending'",
            ),
            0,
        ),
        (
            8,
            "fulfillment_status",
            "TEXT",
            1,
            Some(
                "'unfulfilled'",
            ),
            0,
        ),
        (
            9,
            "payment_method",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            10,
            "shipping_method",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            11,
            "tracking_number",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            12,
            "notes",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            13,
            "shipping_address",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            14,
            "billing_address",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            15,
            "created_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            16,
            "updated_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            17,
            "exchange_rate",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            18,
            "base_currency_total",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            19,
            "version",
            "INTEGER",
            1,
            Some(
                "1",
            ),
            0,
        ),
    ],
)
