crates/stateset-db/tests/snapshots/snapshot_migrations__snapshot_payments_table_schema.snap
---
source: crates/stateset-db/tests/snapshot_migrations.rs
expression: "columns.collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        (
            0,
            "id",
            "TEXT",
            0,
            None,
            1,
        ),
        (
            1,
            "payment_number",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            2,
            "order_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            3,
            "invoice_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            4,
            "customer_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            5,
            "status",
            "TEXT",
            1,
            Some(
                "'pending'",
            ),
            0,
        ),
        (
            6,
            "payment_method",
            "TEXT",
            1,
            Some(
                "'credit_card'",
            ),
            0,
        ),
        (
            7,
            "amount",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            8,
            "currency",
            "TEXT",
            1,
            Some(
                "'USD'",
            ),
            0,
        ),
        (
            9,
            "amount_refunded",
            "TEXT",
            1,
            Some(
                "'0'",
            ),
            0,
        ),
        (
            10,
            "external_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            11,
            "processor",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            12,
            "card_brand",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            13,
            "card_last4",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            14,
            "card_exp_month",
            "INTEGER",
            0,
            None,
            0,
        ),
        (
            15,
            "card_exp_year",
            "INTEGER",
            0,
            None,
            0,
        ),
        (
            16,
            "billing_email",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            17,
            "billing_name",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            18,
            "billing_address",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            19,
            "description",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            20,
            "failure_reason",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            21,
            "failure_code",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            22,
            "metadata",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            23,
            "paid_at",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            24,
            "created_at",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            25,
            "updated_at",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            26,
            "version",
            "INTEGER",
            1,
            Some(
                "1",
            ),
            0,
        ),
        (
            27,
            "idempotency_key",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            28,
            "captured_amount",
            "TEXT",
            0,
            None,
            0,
        ),
    ],
)
