crates/stateset-db/tests/snapshots/snapshot_migrations__snapshot_subscriptions_table_schema.snap
---
source: crates/stateset-db/tests/snapshot_migrations.rs
expression: "columns.collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        (
            0,
            "id",
            "TEXT",
            0,
            None,
            1,
        ),
        (
            1,
            "subscription_number",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            2,
            "customer_id",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            3,
            "plan_id",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            4,
            "plan_name",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            5,
            "status",
            "TEXT",
            1,
            Some(
                "'pending'",
            ),
            0,
        ),
        (
            6,
            "billing_interval",
            "TEXT",
            1,
            Some(
                "'monthly'",
            ),
            0,
        ),
        (
            7,
            "custom_interval_days",
            "INTEGER",
            0,
            None,
            0,
        ),
        (
            8,
            "price",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            9,
            "currency",
            "TEXT",
            1,
            Some(
                "'USD'",
            ),
            0,
        ),
        (
            10,
            "payment_method_id",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            11,
            "started_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            12,
            "current_period_start",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            13,
            "current_period_end",
            "TEXT",
            1,
            None,
            0,
        ),
        (
            14,
            "next_billing_date",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            15,
            "trial_ends_at",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            16,
            "cancelled_at",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            17,
            "ends_at",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            18,
            "paused_at",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            19,
            "resume_at",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            20,
            "billing_cycle_count",
            "INTEGER",
            1,
            Some(
                "0",
            ),
            0,
        ),
        (
            21,
            "failed_payment_attempts",
            "INTEGER",
            1,
            Some(
                "0",
            ),
            0,
        ),
        (
            22,
            "shipping_address",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            23,
            "billing_address",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            24,
            "discount_percent",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            25,
            "discount_amount",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            26,
            "coupon_code",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            27,
            "metadata",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            28,
            "created_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            29,
            "updated_at",
            "TEXT",
            1,
            Some(
                "datetime('now')",
            ),
            0,
        ),
        (
            30,
            "billing_lease_owner",
            "TEXT",
            0,
            None,
            0,
        ),
        (
            31,
            "billing_lease_until",
            "TEXT",
            0,
            None,
            0,
        ),
    ],
)
